Bottoni grafica e dichiarazione
Fatto:
- Aggiunti bottoni nella main activity.xml
- Aggiunta dichiarazione dei bottoni nel main.java e collegati alla parte grafica
- Aggiunto nel file strings per avere scritte nei bottoni dinamici

Da fare:
- Aprire una view al premere del bottone
- Aprire una activity al premere del bottone
- Primo bottone da implementare è il 'calendario'

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">PersonalHealthMonitor</string>
+    <string name="add_report">Add Report</string>
+    <string name="calendario">Calendario</string>
+    <string name="storico">Storico</string>
+    <string name="impostazioni">Impostazioni</string>
+    <string name="grafici">Grafici</string>
 </resources>
